# rust-crm-dev

./: .gitignore  Cargo.toml
src/: common.rs  lib.rs  main.rs  token.rs
src/database/: mod.rs  table.sql
src/libs/: cache.rs  dser.rs  float.rs  lazy.rs  mod.rs  perm.rs  time.rs
src/libs/headers/: basic.rs  mod.rs
src/pages/: mod.rs
src/pages/account/: login.rs  mod.rs  register.rs
src/pages/func/: mod.rs
src/pages/func/customer/: appointment.rs  colleague.rs  index.rs  mod.rs  query.sql
src/pages/func/order/: commission.rs  customer.rs  data.rs  invoice.rs  mod.rs  payment.rs  product.rs  ship.rs  update.rs
src/pages/func/product/: index.rs  mod.rs
src/pages/func/report/: index.rs  mod.rs
src/pages/func/store/: mod.rs  storehouse.rs
src/pages/func/supper/: mod.rs
src/pages/message/: mod.rs
src/pages/setting/: cus.rs  custom.rs  mod.rs  option.rs
src/pages/user/: mod.rs
src/perm/: action.rs  inner.rs  mod.rs  roles.rs
src/response/: mod.rs
