[package]
name = "crm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
axum = {version = "0.7.2", features = ["multipart"]}
tower-http = { version = "0.5.0", features = ["cors"] }
mime = "0.3.17"
base64 = "0.21.5"
# database
mysql = { version = "24.0.0", default-features = false }
mysql_common = {version = "0.31.0", features = ["derive"]}
flate2 = "1.0.28"
# time format
chrono = "0.4.28"
time = { version = "0.3.30", features = ["formatting"] }
# tokio
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
# JSON format
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
# token
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
# other
rand = "0.8.5"
md5 = "0.7.0"
rust-pinyin = "0.1.3"
# debug
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
op = "0.1.3"
lazy_static = "1.4.0"
regex = "1.10.3"
dashmap = {version = "5.5.3", features = ["serde"]}
